--- a/app/package.json
+++ b/app/package.json
@@ -7,6 +7,10 @@
     "@testing-library/jest-dom": "^5.11.4",
     "@testing-library/react": "^11.1.0",
     "@testing-library/user-event": "^12.1.10",
+    "@visx/group": "^1.0.0",
+    "@visx/scale": "^1.3.0",
+    "@visx/shape": "^1.3.0",
+    "@visx/text": "^1.3.0",
     "graphql": "^15.4.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
